...
          screenOptions={{
            headerShown: false,
            sceneStyle: { backgroundColor: "transparent" },
            tabBarHideOnKeyboard: true,
          }}
        >
          <Tabs.Screen name="index" options={{ title: "Map" }} />
          <Tabs.Screen name="alerts" options={{ title: "Status" }} />
          <Tabs.Screen name="stations" options={{ title: "Search" }} />
          <Tabs.Screen name="commutes" options={{ title: "Commutes" }} />
          <Tabs.Screen name="more" options={{ title: "More" }} />
        </Tabs>
      </View>
    </ShellProvider>
  );
}
...
